--- a/latex/main.tex
+++ b/latex/main.tex
@@ -282,7 +282,7 @@ Ved at sætte to af ligningerne for $T$ lig hinanden kan vi vise, at de to formu
 b_{Fit}\cdot\log_2\left(\frac{2\cdot_25}{2}\right)&=b_{Mac}\cdot\log_2\left(\frac{5 + 2}{2}\right)\\
 b_{Mac} &= \frac{b_{Fit}\cdot\log_2\left(\frac{2\cdot5}{2}\right)}{\log_2\left(\frac{5 + 2}{2}\right)}
 \end{align*}
-Indsætter vi denne værdi for $b_{Mac}$ i MacKenzie's formulering, kan vi finde frem til, at MacKenzie's og Fitts' formuleringer kun er ens, såfremt $ID$ ledet er ens, hvilket ikke er tilfældet.
+Indsætter vi denne værdi for $b_{Mac}$ i MacKenzie's formulering, kan vi finde frem til, at MacKenzie's og Fitts' formuleringer kun er ens, såfremt $ID$-ledet er ens, hvilket ikke er tilfældet.
 \begin{align*}
 \text{Mackenzie: } &T =\frac{b_{Fit}\cdot\log\left(\frac{2\cdot5}{2}\right)}{\log\left(\frac{5 + 2}{2}\right)}\cdot\log\left(\frac{5 + 2}{2}\right)\\
 \text{Mackenzie: } &T =b_{Fit}\cdot\log\left(\frac{2\cdot5}{2}\right)
