--- a/latex/main.tex
+++ b/latex/main.tex
@@ -284,8 +284,8 @@ b_{Mac} &= \frac{b_{Fit}\cdot\log_2\left(\frac{2\cdot5}{2}\right)}{\log_2\left(\
 \end{align*}
 Indsætter vi denne værdi for $b_{Mac}$ i MacKenzie's formulering, kan vi finde frem til, at MacKenzie's og Fitts' formuleringer kun er ens, såfremt $ID$-ledet er ens, hvilket ikke er tilfældet.
 \begin{align*}
-\text{Mackenzie: } &T =\frac{b_{Fit}\cdot\log_2\left(\frac{2\cdot5}{2}\right)}{\log_2\left(\frac{5 + 2}{2}\right)}\cdot\log_2\left(\frac{5 + 2}{2}\right)\\
-\text{Mackenzie: } &T =b_{Fit}\cdot\log_2\left(\frac{2\cdot5}{2}\right)
+\text{MacKenzie: } &T =\frac{b_{Fit}\cdot\log_2\left(\frac{2\cdot5}{2}\right)}{\log_2\left(\frac{5 + 2}{2}\right)}\cdot\log_2\left(\frac{5 + 2}{2}\right)\\
+\text{MacKenzie: } &T =b_{Fit}\cdot\log_2\left(\frac{2\cdot5}{2}\right)
 \end{align*}
 
 Denne sammenligning af formuleringerne to og to kan gøres for dem alle fire, men det vil vi undlade at gøre her, og blot formode, at det rent faktisk er tilfældet for dem alle sammen. De fire formuleringer er derfor ikke ens og vi vil derfor få forskellige resultater når vi bruger dem på den indsamlede data.
