--- a/latex/main.tex
+++ b/latex/main.tex
@@ -290,7 +290,7 @@ Indsætter vi denne værdi for $b_{Mac}$ i MacKenzie's formulering, kan vi finde
 
 Denne sammenligning af formuleringerne to og to kan gøres for dem alle fire, men det vil vi undlade at gøre her, og blot formode, at det rent faktisk er tilfældet for dem alle sammen. De fire formuleringer er derfor ikke ens og vi vil derfor få forskellige resultater når vi bruger dem på den indsamlede data.
 
-På trods af at de fire formuleringer er forskellige, vil de kunne approksimere hinanden. Vi har derfor plottet de fire formuleringer i ét interval, for at se om de approksimerer hinanden. Figur \ref{fig:Sammenligning} viser $ID$ som funktion af $A/W$ og viser at Meyer's, Welford's og MacKenzie's approksimerer hinanden for $A/W$-værdier mellem 0 og 25. Grafen for Fitts ligger højere end de tre andre og approksimerer ikke de andre.
+På trods af, at de fire formuleringer er forskellige, vil de kunne approksimere hinanden. Vi har derfor plottet de fire formuleringer i et interval, for at se om de approksimerer hinanden. Figur \ref{fig:Sammenligning} viser $ID$ som funktion af $A/W$ og viser at Meyer's, Welford's og MacKenzie's approksimerer hinanden for $A/W$-værdier mellem 0 og 25. Grafen for Fitts ligger højere end de tre andre og approksimerer ikke de andre.
 
 \begin{figure}[h]
 \centering
