--- a/latex/main.tex
+++ b/latex/main.tex
@@ -295,7 +295,7 @@ På trods af, at de fire formuleringer er forskellige, vil de kunne approksimere
 \begin{figure}[h]
 \centering
 \includegraphics[width=\linewidth]{images/plots/plot_comparison_id}
-\caption{Graf over $ID$ (y-akse) i forhold til $A/W$ (x-akse) med linjer, der viser udviklingen af $ID$-funktionen for de fire forskellige modeller.}
+\caption{Graf over $ID$ (y-akse) i forhold til $A/W$ (x-akse) med linjer, der viser udviklingen af $ID$-funktionen for de fire forskellige modeller}
 \label{fig:Sammenligning}
 \end{figure}
 
