--- a/latex/main.tex
+++ b/latex/main.tex
@@ -301,7 +301,7 @@ På trods af, at de fire formuleringer er forskellige, vil de kunne approksimere
 
 \addcontentsline{toc}{chapter}{Design}
 \chapter*{Design}
-I dette afsnit beskriver vi det design som ligger til grunde for vores forsøg. Derudover vil vi også beskrive vores forsøgsopstillinger.
+I dette afsnit beskriver vi det design som ligger til grunde for vores forsøg. Dertil vil vi også beskrive vores forsøgsopstillinger.
 
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
