--- a/latex/main.tex
+++ b/latex/main.tex
@@ -306,7 +306,7 @@ I dette afsnit beskriver vi det design, som ligger til grunde for vores forsøg.
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
 Vi har valgt at udføre to brugerundersøgelser, for at have både et kontrolleret og et ukontrolleret datasæt med deltagernes bevægelsesbaner.
-Det første vil være et kontrolleret laboratorieeksperiment, hvor vi kontrollerer flest mulige variable, mens det andet er et ukontrolleret crowdsourcing- og webbaseret eksperiment, hvor vi får en større mængde data, men ikke har den samme kontrol over eksperimentets variable.\\\\
+Det første vil være et laboratorieeksperiment, hvor vi kontrollerer flest mulige variable, mens det andet er et crowdsourcing- og webbaseret eksperiment, hvor vi får en større mængde data, men ikke har den samme kontrol over eksperimentets variable.\\\\
 Større dele af vores eksperiment har vi valgt at udføre ligesom tidligere udførte forsøg, da de er udført af eksperter med langt mere erfaring i dette område end os.
 Det drejer sig om følgende dele af vores eksperiment:
 \begin{itemize}
