--- a/latex/main.tex
+++ b/latex/main.tex
@@ -319,7 +319,7 @@ Derudover har vi brugt samme udformning af tunnel- og spiralopgave, som i pegeop
 
 \addcontentsline{toc}{section}{Platform og udviklingsværktøj}
 \section*{Platform og udviklingsværktøj}
-Vi har valgt at bruge JavaScript til at udvikle vores forsøg, da vi alle er bekendte med sproget, så vi skal ikke sætte os ind i noget nyt. Derudover er det integreret i alle browsere nu om dage, hvilket gør det nemt at crowdsource. For at generere vores opgaver har vi valgt at gøre brug af JavaScript-frameworket $paper.js$. Det gør brug af HTML5 Canvas og er bagudkompatibelt til Internet Explorer 9. Frameworket gør det muligt at autogenerere cirkler til vores pegeopgaver, gemme bevægelsesbaner og tegne tunneller og spiraller, til vores tunnel- og spiralopgaver.
+Vi har valgt at bruge JavaScript til at udvikle vores forsøg, da vi alle er bekendte med sproget, så vi skal ikke sætte os ind i noget nyt. Derudover er det integreret i alle browsere nu om dage, hvilket gør det nemt at crowdsource. For at generere vores opgaver har vi valgt at gøre brug af JavaScript-frameworket $paper.js$. Det gør brug af HTML5 Canvas og er bagudkompatibelt til Internet Explorer 9. Frameworket gør det muligt at autogenerere cirkler til vores pegeopgaver, gemme bevægelsesbaner og tegne elementer, til vores tunnel- og spiralopgaver.
 
 \addcontentsline{toc}{section}{Opgavetyper}
 \section*{Opgavetyper}
