--- a/latex/main.tex
+++ b/latex/main.tex
@@ -331,25 +331,25 @@ I denne sektion vil vi beskrive, hvordan tunnel-, spiral- og pegeopgaverne er de
 	\begin{minipage}{\textwidth}
 		\centering
 		\includegraphics[width=\textwidth, trim = .5cm 23cm .5cm 15cm, clip]{images/screenshots/ex_step_4_tunnel_path}
-		\captionof{figure}{Skærmbillede af den første tunnelopgave, med starten af en testpersons sti.}
+		\captionof{figure}{Skærmbillede af den første tunnelopgave, med starten af en testpersons sti}
 		\label{fig:ex_tunnel_1}
 	\end{minipage}
 	\begin{minipage}{\textwidth}
 		\centering
 		\includegraphics[width=\textwidth, trim = .5cm 22cm .5cm 15cm, clip]{images/screenshots/ex_step_4_tunnel_2}
-		\captionof{figure}{skærmbillede af den anden tunnelopgave.}
+		\captionof{figure}{skærmbillede af den anden tunnelopgave}
 		\label{fig:ex_tunnel_2}
 	\end{minipage}
 	\begin{minipage}{\textwidth}
 		\centering
 		\includegraphics[width=\textwidth, trim = .5cm 21cm .5cm 15cm, clip]{images/screenshots/ex_step_4_tunnel_3}
-		\captionof{figure}{Skærmbillede af den tredje tunnelopgave.}
+		\captionof{figure}{Skærmbillede af den tredje tunnelopgave}
 		\label{fig:ex_tunnel_3}
 	\end{minipage}
 	\begin{minipage}{\textwidth}
 		\centering
 		\includegraphics[width=\textwidth, trim = .5cm 20cm .5cm 15cm, clip]{images/screenshots/ex_step_4_tunnel_4}
-		\captionof{figure}{Skærmbillede af den fjerde tunnelopgave.}
+		\captionof{figure}{Skærmbillede af den fjerde tunnelopgave}
 		\label{fig:ex_tunnel_4}
 	\end{minipage}
 \end{minipage}\\\\
@@ -1185,7 +1185,7 @@ Med den teknologiske udvikling kunne det også være relevant at undersøge Fitt
 %\end{itemize}
 
 \nocite{*}
-%\input{appendices.tex}
+\input{appendices.tex}
 \addcontentsline{toc}{chapter}{\bibname}
 \printbibliography
 \end{document}
