--- a/latex/main.tex
+++ b/latex/main.tex
@@ -353,7 +353,7 @@ I denne sektion vil vi beskrive, hvordan tunnel-, spiral- og pegeopgaverne er de
 		\label{fig:ex_tunnel_4}
 	\end{minipage}
 \end{minipage}\\\\
-I denne opgave skal testdeltageren føre sin markør igennem fire tunneller af varierende længde, og varierende indmundingsbredde. Alle tunnellerne er skaleret ned til 50\% af deres oprindelige størrelse, så deres indbyrdes relative størrelse er beholdt. De fire tunneller kan ses på Figur \ref{fig:ex_tunnel_1}, \ref{fig:ex_tunnel_2}, \ref{fig:ex_tunnel_3} og \ref{fig:ex_tunnel_4}.  Størrelserne målt i pixels for tunnellængde ($A$) og den venstre lodrette linje ($W$) er vist i tabel \ref{tab:tunnelopgave}. Den højre lodrette linje er fastsat til 8 pixels bredde, hvilket stemmer overens med forsøget lavet i \cite{accot1997}
+I denne opgave skal testdeltageren føre sin markør igennem fire tunneller af varierende længde, og varierende bredde på startlinjen. Alle tunnellerne er skaleret ned til 50\% af deres oprindelige størrelse, så deres indbyrdes relative størrelse er beholdt. De fire tunneller kan ses på Figur \ref{fig:ex_tunnel_1}, \ref{fig:ex_tunnel_2}, \ref{fig:ex_tunnel_3} og \ref{fig:ex_tunnel_4}.  Størrelserne målt i pixels for tunnellængde ($A$) og den venstre lodrette linje ($W$) er vist i tabel \ref{tab:tunnelopgave}. Den højre lodrette linje er fastsat til 8 pixels bredde, hvilket stemmer overens med forsøget lavet i \cite{accot1997}
 \begin{center}
 	\begin{tabular}{c c c}
 		Tunnel & A & W \\
