--- a/latex/main.tex
+++ b/latex/main.tex
@@ -366,7 +366,7 @@ I denne opgave skal testdeltageren føre sin markør igennem fire tunneller af v
 	\captionof{table}{Størrelse i pixels af $A$ (længde) og $W$ (venstre lodrette streg) af tunneller brugt i tunnelopgaverne}
 	\label{tab:tunnelopgave}
 \end{center}
-Ved begyndelsen af en tunnelopgave vil den venstre side af tunnellen være markeret med grøn for at tydeliggøre, hvor opgaven starter. Når testdeltagerens markør passerer venstre side af tunnellen vil opgaven starte, og det vil nu være den højre side af tunnellen der er grøn, for at signalere hvor markøren herefter skal flyttes hen. Når opgaven er i gang, vil der som på figur \ref{fig:ex_tunnel_1}, blive vist en grøn linje der hvor markøren flyttes fra; i tilfælde af at testdeltageren rammer eller ryger uden for kanterne, vil de kunne fortsætte ubemærket.\\
+Ved begyndelsen af en tunnelopgave vil startstregen af tunnellen være markeret med grøn for at tydeliggøre, hvor opgaven starter. Når testdeltagerens markør passerer venstre side af tunnellen vil opgaven starte, og det vil nu være den højre side af tunnellen der er grøn, for at signalere hvor markøren herefter skal flyttes hen. Når opgaven er i gang, vil der som på figur \ref{fig:ex_tunnel_1}, blive vist en grøn linje der hvor markøren flyttes fra; i tilfælde af at testdeltageren rammer eller ryger uden for kanterne, vil de kunne fortsætte ubemærket.\\
 Når testpersonen passerer den højre side af tunnellen vil opgaven stoppe, og der vil blive vist en knap, hvor testpersonen kan fortsætte til næste opgave, eller afslutte denne test, hvis sidste opgave er gennemført. Ved afslutningen af de fire tunnelopgaver vil tunnellernes længde og bredde, og markørens bane, blive gemt - og til sidst sendt til vores database.
 
 \addcontentsline{toc}{subsection}{Spiralopgave}
