--- a/latex/main.tex
+++ b/latex/main.tex
@@ -363,7 +363,7 @@ I denne opgave skal testdeltageren føre sin markør igennem fire tunneller af v
 		3 & 300 & 40 \\
 		4 & 400 & 50 \\
 	\end{tabular}
-	\captionof{table}{Størrelse i pixels af $A$ (længde) og $W$ (venstre lodrette streg) af tunneller brugt i tunnelopgaverne}
+	\captionof{table}{Størrelse i pixels af $A$ (længde) og $W$ (startstregen) af tunneller brugt i tunnelopgaverne}
 	\label{tab:tunnelopgave}
 \end{center}
 Ved begyndelsen af en tunnelopgave vil startstregen af tunnellen være markeret med grøn for at tydeliggøre, hvor opgaven starter. Når testdeltagerens markør passerer venstre side af tunnellen vil opgaven starte, og det vil nu være den højre side af tunnellen der er grøn, for at signalere hvor markøren herefter skal flyttes hen. Når opgaven er i gang, vil der som på figur \ref{fig:ex_tunnel_1}, blive vist en grøn linje der hvor markøren flyttes fra; i tilfælde af at testdeltageren rammer eller ryger uden for kanterne, vil de kunne fortsætte ubemærket.\\
