--- a/latex/main.tex
+++ b/latex/main.tex
@@ -375,19 +375,19 @@ Når testpersonen passerer slutstregen af tunnellen vil opgaven stoppe, og der v
 \begin{minipage}{\linewidth}
 	\centering
 	\includegraphics[width=.4\linewidth, trim = 5cm 20cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_path}
-	\captionof{figure}{Skærmbillede af den første spiralopgave, med starten af en testpersons sti.}
+	\captionof{figure}{Skærmbillede af den første spiralopgave, med starten af en testpersons sti}
 	\label{fig:ex_spiral_1}
 	\includegraphics[width=.4\linewidth, trim = 5cm 18.1cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_2}
-	\captionof{figure}{Skærmbillede af den anden spiralopgave.}
+	\captionof{figure}{Skærmbillede af den anden spiralopgave}
 	\label{fig:ex_spiral_2}
 	\includegraphics[width=.5\linewidth, trim = 5cm 15.4cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_3}
-	\captionof{figure}{Skærmbillede af den tredje spiralopgave.}
+	\captionof{figure}{Skærmbillede af den tredje spiralopgave}
 	\label{fig:ex_spiral_3}
 	\includegraphics[width=.5\linewidth, trim = 5cm 14.3cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_4}
-	\captionof{figure}{Skærmbillede af den fjerde spiralopgave.}
+	\captionof{figure}{Skærmbillede af den fjerde spiralopgave}
 	\label{fig:ex_spiral_4}
 \end{minipage}\\\\
-I denne opgave skal testdeltageren føre sin markør igennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}. De er skaleret cirka 80\% ned, men deres indbyrdes relative størrelser er beholdt. Antallet af vindinger i spiralerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
+I denne opgave skal testdeltageren føre sin markør igennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, og de er skaleret cirka 80\% ned, men deres indbyrdes relative størrelser er beholdt. Antallet af vindinger i spiralerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
 \begin{center}
 	\begin{tabular}{c c c}
 		Spiral & A & W \\
