--- a/latex/main.tex
+++ b/latex/main.tex
@@ -387,7 +387,7 @@ Når testpersonen passerer slutstregen af tunnellen vil opgaven stoppe, og der v
 	\captionof{figure}{Skærmbillede af den fjerde spiralopgave}
 	\label{fig:ex_spiral_4}
 \end{minipage}\\\\
-I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative størrelser er beholdt. Antallet af vindinger i spiralerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
+I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger og bredden af spiralerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
 \begin{center}
 	\begin{tabular}{c c c}
 		Spiral & A & W \\
