--- a/latex/main.tex
+++ b/latex/main.tex
@@ -387,7 +387,7 @@ Når testpersonen passerer slutstregen af tunnellen vil opgaven stoppe, og der v
 	\captionof{figure}{Skærmbillede af den fjerde spiralopgave}
 	\label{fig:ex_spiral_4}
 \end{minipage}\\\\
-I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger og bredden af spiralerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
+I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger og bredden af spiraltunellerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
 \begin{center}
 	\begin{tabular}{c c c}
 		Spiral & A & W \\
@@ -397,7 +397,7 @@ I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af var
 		3 & 3 & 3.1\\
 		4 & 4 & 3.05\\
 	\end{tabular}
-	\captionof{table}{Værdier af $A$ (antal vindinger) af spiraler brug i spiralopgaverne}
+	\captionof{table}{Størrelse i pixels af $A$ (antal vindinger) og $W$ (bredden i spiraltunellen) af spiraler brug i spiralopgaverne}
 	\label{tab:spiralopgave}
 \end{center}
 Ved begyndelsen af en spiralopgave vil spiralens udmunding være grøn for at tydeliggøre over for testpersonen, hvor opgaven starter. Når testdeltagerens markør passerer den yderste vertikale linje vil opgaven starte, der vil blive vist en grøn streg der, hvor markøren flyttes fra, og den inderste vertikale linje vil derefter skifte til grøn for at signalere, hvor testpersonen skal flytte sin markør hen. I tilfælde af at testdeltageren rammer kanten både ind- og udvendigt i spiralen, vil de kunne fortsætte ubemærket.\\
