--- a/latex/main.tex
+++ b/latex/main.tex
@@ -387,7 +387,7 @@ Når testpersonen passerer slutstregen af tunnellen vil opgaven stoppe, og der v
 	\captionof{figure}{Skærmbillede af den fjerde spiralopgave}
 	\label{fig:ex_spiral_4}
 \end{minipage}\\\\
-I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger i spiralen og bredden af spiraltunellerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
+I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger i spiralen og bredden af spiraltunellerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindinger på spiralerne er taget fra \cite{accot1997}.
 \begin{center}
 	\begin{tabular}{c c c}
 		Spiral & A & W \\
@@ -400,7 +400,7 @@ I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af var
 	\captionof{table}{Størrelse i pixels af $A$ (antal vindinger) og $W$ (bredden i spiraltunellen) af spiraler brug i spiralopgaverne}
 	\label{tab:spiralopgave}
 \end{center}
-Ved begyndelsen af en spiralopgave vil spiralens udmunding være grøn for at tydeliggøre over for testpersonen, hvor opgaven starter. Når testdeltagerens markør passerer den yderste vertikale linje vil opgaven starte, der vil blive vist en grøn streg der, hvor markøren flyttes fra, og den inderste vertikale linje vil derefter skifte til grøn for at signalere, hvor testpersonen skal flytte sin markør hen. I tilfælde af at testdeltageren rammer kanten både ind- og udvendigt i spiralen, vil de kunne fortsætte ubemærket.\\
+Ved begyndelsen af en spiralopgave vil spiralens yderste vertikale linje være grøn for at tydeliggøre over for testpersonen, hvor opgaven starter. Når testdeltagerens markør passerer den yderste vertikale linje vil opgaven starte, der vil blive vist en grøn streg der, hvor markøren flyttes fra, og den inderste vertikale linje vil derefter skifte til grøn for at signalere, hvor testpersonen skal flytte sin markør hen. I tilfælde af at testdeltageren rammer kanten både ind- og udvendigt i spiralen, vil de kunne fortsætte ubemærket.\\
 Når testpersonen passerer den inderste vertikale linje i spiralen, vil opgaven stoppe. Der vil efterfølgende blive vist en knap, hvor der kan fortsættes til næste spiral, eller afslutte og fortsætte til næste opgave. Ved afslutning af opgaven vil vi, som med tunnelopgaven, gemme tiden det har taget og banen brugt igennem spiralen, og sende denne til vores database.
 
 \addcontentsline{toc}{subsection}{Pegeopgave}
