--- a/latex/main.tex
+++ b/latex/main.tex
@@ -400,7 +400,7 @@ I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af var
 	\captionof{table}{Størrelse i pixels af $A$ (antal vindinger) og $W$ (bredden i spiraltunellen) af spiraler brug i spiralopgaverne}
 	\label{tab:spiralopgave}
 \end{center}
-Ved begyndelsen af en spiralopgave vil spiralens yderste vertikale linje, startstregen, være grøn for at tydeliggøre over for testpersonen, hvor opgaven starter. Når testdeltagerens markør passerer den yderste vertikale linje vil opgaven starte, der vil blive vist en grøn streg der, hvor markøren flyttes fra, og den inderste vertikale linje vil derefter skifte til grøn for at signalere, hvor testpersonen skal flytte sin markør hen. I tilfælde af at testdeltageren rammer kanten både ind- og udvendigt i spiralen, vil de kunne fortsætte ubemærket.\\
+Ved begyndelsen af en spiralopgave vil spiralens yderste vertikale linje, startstregen, være grøn for at tydeliggøre over for testpersonen, hvor opgaven starter. Når testdeltagerens markør passerer startstregen vil opgaven starte, og der vil blive vist en grøn streg der, hvor markøren flyttes fra, endvidere vil den inderste vertikale linje, slutstregen, skifte til grøn for at signalere, hvor testpersonen skal flytte sin markør hen. I tilfælde af at testdeltageren rammer kanten både ind- og udvendigt i spiralen, vil de kunne fortsætte ubemærket.\\
 Når testpersonen passerer den inderste vertikale linje i spiralen, vil opgaven stoppe. Der vil efterfølgende blive vist en knap, hvor der kan fortsættes til næste spiral, eller afslutte og fortsætte til næste opgave. Ved afslutning af opgaven vil vi, som med tunnelopgaven, gemme tiden det har taget og banen brugt igennem spiralen, og sende denne til vores database.
 
 \addcontentsline{toc}{subsection}{Pegeopgave}
