--- a/latex/main.tex
+++ b/latex/main.tex
@@ -413,13 +413,13 @@ Testdeltagerens bane til mål-cirklen er illustreret ved en grøn linje, der fø
 \begin{minipage}[t]{.5\linewidth}
 \centering
 \vspace{0pt}
-\captionof{figure}{Illustration af cirklen i midten af skærmen ved pegeopgavens start}
+\captionof{figure}{Illustration af center cirklen af skærmen ved pegeopgavens start}
 \includegraphics[width=0.8\textwidth, trim = 8cm 20cm 8cm 15cm, clip]{images/screenshots/ex_step_6_pointing_start}
 \label{fig:pegeopgave_start}
-\caption{Illustration af cirklen i midten, og målet der skal rammes efter der klikkes på cirklen I midten af skærmen}
+\caption{Illustration af center cirklen, og målet der skal rammes efter der klikkes på cirklen I midten af skærmen}
 \includegraphics[width=0.8\textwidth, trim = 8cm 8cm 8cm 15cm, clip]{images/screenshots/ex_step_6_pointing_target_1}
 \label{fig:pegeopgave_target}
-\caption{Illustration af cirklen i midten, målet der skal rammes, og stien som testpersonen har taget for at komme hen til målet}
+\caption{Illustration af center cirklen, målet der skal rammes, og stien som testpersonen har taget for at komme hen til målet}
 \includegraphics[width=0.8\textwidth, trim = 8cm 22cm 20cm 5cm, clip]{images/screenshots/ex_step_6_pointing_path}
 \label{fig:pegeopgave_path}
 \end{minipage}
