--- a/latex/main.tex
+++ b/latex/main.tex
@@ -406,20 +406,20 @@ Når testdeltageren passerer den inderste vertikale linje i spiralen, vil opgave
 
 \addcontentsline{toc}{subsection}{Pegeopgave}
 \subsection*{Pegeopgave}
-I denne opgave vil testdeltageren blive præsenteret for en sekvens af 25 cirkulære mål af skiftende størrelse og position. Målene præsenteres i rækkefølgen, som ses i tabel \ref{tab:pegeopgave}. Hver test i sættet starter, når testdeltageren klikker inden for en fastplaceret cirkel i canvasets center og slutter når testdeltageren klikker inden for målet. Hvert cirkulært mål varierer i distance fra center cirklen og varierer i diameter, hvilket giver ændringer i A/W-forholdet, som ses i tabel \ref{tab:pegeopgave}. Center cirklen vil blive præsenteret i en grøn farve, se figur \ref{fig:pegeopgave_start}, og vil ved klik skifte til blå - alle mål cirklerne er vist i grøn farve. Figur \ref{fig:pegeopgave_target} illustrerer, hvordan center og mål cirklerne er farvet. 
+I denne opgave vil testdeltageren blive præsenteret for en sekvens af 25 cirkulære mål af skiftende størrelse og position. Målene præsenteres i rækkefølgen, som ses i tabel \ref{tab:pegeopgave}. Hver test i sættet starter, når testdeltageren klikker inden for en fastplaceret cirkel i canvasets center og slutter når testdeltageren klikker inden for målet. Hvert cirkulært mål varierer i distance fra centercirklen og varierer i diameter, hvilket giver ændringer i A/W-forholdet, som ses i tabel \ref{tab:pegeopgave}. Centercirklen vil blive præsenteret i en grøn farve, se figur \ref{fig:pegeopgave_start}, og vil ved klik skifte til blå - alle mål cirklerne er vist i grøn farve. Figur \ref{fig:pegeopgave_target} illustrerer, hvordan center- og målcirklerne er farvet. 
 
-Testdeltagerens bane til mål-cirklen er illustreret ved en grøn linje, der følger musen, et eksempel herpå ses i figur \ref{fig:pegeopgave_path}. Vi vil i løbet af opgaven registrere tiden det tager fra, at testpersonen trykker på center cirklen, til de trykker på målet. Dertil vil banen som testdeltageren bruger også blive registreret. De tre illustrationer af pegeopgaven er skaleret forskelligt for bedre at tydeliggøre, essensen i opgaven.
+Testdeltagerens bane til mål-cirklen er illustreret ved en grøn linje, der følger musen, et eksempel herpå ses i figur \ref{fig:pegeopgave_path}. Vi vil i løbet af opgaven registrere tiden det tager fra, at testpersonen trykker på centercirklen, til de trykker på målet. Dertil vil banen som testdeltageren bruger også blive registreret. De tre illustrationer af pegeopgaven er skaleret forskelligt for bedre at tydeliggøre, essensen i opgaven.
 
 \begin{minipage}[t]{.5\linewidth}
 \centering
 \vspace{0pt}
-\captionof{figure}{Illustration af center cirklen af skærmen ved pegeopgavens start}
+\captionof{figure}{Illustration af centercirklen af skærmen ved pegeopgavens start}
 \includegraphics[width=0.8\textwidth, trim = 8cm 20cm 8cm 15cm, clip]{images/screenshots/ex_step_6_pointing_start}
 \label{fig:pegeopgave_start}
-\caption{Illustration af center cirklen, og målet der skal rammes efter der klikkes på cirklen I midten af skærmen}
+\caption{Illustration af centercirklen, og målet der skal rammes efter der klikkes på cirklen I midten af skærmen}
 \includegraphics[width=0.8\textwidth, trim = 8cm 8cm 8cm 15cm, clip]{images/screenshots/ex_step_6_pointing_target_1}
 \label{fig:pegeopgave_target}
-\caption{Illustration af center cirklen, målet der skal rammes, og stien som testpersonen har taget for at komme hen til målet}
+\caption{Illustration af centercirklen, målet der skal rammes, og stien som testpersonen har taget for at komme hen til målet}
 \includegraphics[width=0.8\textwidth, trim = 8cm 22cm 20cm 5cm, clip]{images/screenshots/ex_step_6_pointing_path}
 \label{fig:pegeopgave_path}
 \end{minipage}
