--- a/latex/main.tex
+++ b/latex/main.tex
@@ -408,7 +408,7 @@ Når testdeltageren passerer den inderste vertikale linje i spiralen, vil opgave
 \subsection*{Pegeopgave}
 I denne opgave vil testdeltageren blive præsenteret for en sekvens af 25 cirkulære mål af skiftende størrelse og position. Målene præsenteres i rækkefølgen, som ses i tabel \ref{tab:pegeopgave}. Hver test i sættet starter, når testdeltageren klikker inden for en fastplaceret cirkel i canvasets center og slutter når testdeltageren klikker inden for målet. Hvert cirkulært mål varierer i distance fra centercirklen og varierer i diameter, hvilket giver ændringer i A/W-forholdet, som ses i tabel \ref{tab:pegeopgave}. Centercirklen vil blive præsenteret i en grøn farve, se figur \ref{fig:pegeopgave_start}, og vil ved klik skifte til blå - alle mål cirklerne er vist i grøn farve. Figur \ref{fig:pegeopgave_target} illustrerer, hvordan center- og målcirklerne er farvet. 
 
-Testdeltagerens bane til målcirklen er illustreret ved en grøn linje, der følger musen, et eksempel herpå ses i figur \ref{fig:pegeopgave_path}. Vi vil i løbet af opgaven registrere tiden det tager fra, at testpersonen trykker på centercirklen, til de trykker på målcirklen. Dertil vil banen som testdeltageren bruger også blive registreret. De tre illustrationer af pegeopgaven er skaleret forskelligt for bedre at tydeliggøre, essensen i opgaven.
+Testdeltagerens bane til målcirklen er illustreret ved en grøn linje, der følger musen. Et eksempel herpå ses i figur \ref{fig:pegeopgave_path}. Vi vil i løbet af opgaven registrere tiden det tager fra, at testpersonen trykker på centercirklen, til de trykker på målcirklen. Dertil vil banen som testdeltageren bruger også blive registreret. De tre illustrationer af pegeopgaven er skaleret forskelligt for bedre at tydeliggøre, essensen i opgaven.
 
 \begin{minipage}[t]{.5\linewidth}
 \centering
