--- a/latex/main.tex
+++ b/latex/main.tex
@@ -454,7 +454,7 @@ Testdeltagerens bane til målcirklen er illustreret ved en grøn linje, der føl
         24 & 191 & 50 & 3.82  \\
         25 & 179 & 18 & 9.94  \\\hline
     \end{tabular}
-   \captionof{table}{Størrelser i pixel af $A$ (længde til mål), $W$ (bredde af mål) og udregnede $A/W$ for alle pegeopgaver}
+   \captionof{table}{Størrelser i pixels af $A$ (længde til mål), $W$ (bredde af mål) og udregnede $A/W$ for alle pegeopgaver}
    \label{tab:pegeopgave}
 \end{minipage}
 
