--- a/latex/main.tex
+++ b/latex/main.tex
@@ -463,7 +463,7 @@ Testdeltagerens bane til målcirklen er illustreret ved en grøn linje, der føl
 \subsection*{Generelt for de tre opgaver}
 I alle opgaverne vil testdeltagerne blive informeret om, hvor mange opgaver de mangler at gennemføre, så de ved hvornår de er færdige. Den grå tekst \textit{"Remaining circles"} i figur \ref{fig:pegeopgave_target} er et eksempel på, hvordan denne information så ud undervejs. Vi har medtaget det i håb om, at testdeltagere fra crowdsourcing forsøget ikke vil miste tålmodigheden midt i testen.  
 
-Hvis testdeltagerne bevæger pegeenheden uden for det canvas som opgaven skal udføres i, vil denne del af banen ikke komme med i vores gemte data. For tunnel- og spiralopgaverne er størrelsen på det omkringliggende canvas 1024x512 pixels, imens det for pegeopgaven er 512x512 pixels. Disse størrelser er faste uanset størrelsen på testdeltagerens skærm. Hvilket er valgt for at sikre de samme forhold på opgaverne for alle testdeltagere.
+Hvis testdeltagerne bevæger pegeenheden uden for det canvas som opgaven skal udføres i, vil denne del af banen ikke komme med i vores gemte data. For tunnel- og spiralopgaverne er størrelsen på det omkringliggende canvas 1024x512 pixels, imens det for pegeopgaven er 512x512 pixels. Disse størrelser er faste uanset størrelsen på testdeltagerens skærm. Hvilket er valgt for at sikre de samme forhold på elementerne i opgaverne for alle testdeltagere.
 
 \addcontentsline{toc}{chapter}{Eksperimenter}
 \chapter*{Eksperimenter}
