--- a/latex/main.tex
+++ b/latex/main.tex
@@ -475,7 +475,7 @@ Hvis testdeltagerne bevæger pegeenheden uden for det canvas som opgaven skal ud
 \subsection*{Laboratorieeksperiment}
 Laboratorieeksperimentet vil blive udført af 10 tilfældigt udvalgte universitetsstuderende - dog ikke dataloger.
 Forsøget foretages fra kl 9-13 - tidligt på dagen - for at sikre, at folk stadig er friske. Det vil foregå i en 4-personers sofabås på H.C. Ørstedinstituttet, hvor der er privat og få forstyrrelser.
-Tidsmæssigt vil der være afsat 20 minutter til hver deltager, dog med plads til ekstra tid hvis nødvendigt. For at sikre os, at forsøgene forløber korrekt og ensartet har vi udarbejdet end drejebog, der kan ses i bilag \ref{sec:drejebog}. Hver deltager bliver først introduceret til vores projekt og derefter introduceret til hhv. tunnel-, spiral- og pegeopgaven.
+Der vil være afsat 20 minutter til hver deltager, dog med plads til ekstra tid hvis nødvendigt. For at sikre os, at forsøgene forløber korrekt og ensartet har vi udarbejdet end drejebog, der kan ses i bilag \ref{sec:drejebog}. Hver deltager bliver først introduceret til vores projekt og derefter introduceret til hhv. tunnel-, spiral- og pegeopgaven.
 Herefter bliver testdeltageren bedt om at udføre tunnelopgaven - efterfulgt af spiral- og pegeopgaven - hvor der vil være et antal opgaver, som skal udføres, hhv. 4 for tunnelopgaven, 4 for spiralopgaven og 25 for pegeopgaven.
 
 \addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
