--- a/latex/main.tex
+++ b/latex/main.tex
@@ -478,7 +478,7 @@ Forsøget foretages fra kl 9-13 - tidligt på dagen - for at sikre, at folk stad
 
 Der vil være afsat 20 minutter til hver deltager, dog med plads til ekstra tid hvis nødvendigt. For at sikre os, at forsøgene forløber korrekt og ensartet har vi udarbejdet en drejebog, der kan ses i bilag \ref{sec:drejebog}. Hver deltager bliver først introduceret til vores projekt og derefter introduceret til henholdsvis tunnel-, spiral- og pegeopgaven.
 
-Herefter bliver testdeltageren bedt om at udføre tunnelopgaven - efterfulgt af spiral- og pegeopgaven - hvor der vil være et antal opgaver, som skal udføres, hhv. 4 for tunnelopgaven, 4 for spiralopgaven og 25 for pegeopgaven.
+Herefter bliver testdeltageren bedt om at udføre tunnelopgaven, efterfulgt af spiralopgaven og til sidst pegeopgaven. Der vil være et antal opgaver, som skal udføres henholdsvis fire for tunnelopgaven, fire for spiralopgaven og 25 for pegeopgaven.
 
 \addcontentsline{toc}{subsection}{Crowdsourcingeksperiment}
 \subsection*{Crowdsourcingeksperiment}
