--- a/latex/main.tex
+++ b/latex/main.tex
@@ -484,7 +484,7 @@ Herefter bliver testdeltageren bedt om at udføre tunnelopgaven, efterfulgt af s
 \subsection*{Crowdsourcingeksperiment}
 Crowdsourcingeksperimentet vil foregå på internettet, og vi har derfor gjort vores program tilgængeligt online. På grund af de faste canvas størrelser vil alle besøg fra smartphones eller tablets blive blokeret, og informeret om, at forsøget kun er tilgængeligt fra en computer. 
 
-Ved crowdsourcingeksperimentets start vil hver deltager udfylde formularen, som ses i figur \ref{fig:Questions}, før de kan fortsætte. Når formularen er udfyldt fortsætter deltageren til opgaverne. Her skal der, ligesom i laboratorieeksperimentet, udføres 4 tunnelopgaver, efterfulgt af 4 spiralopgaver og til sidst 25 pegeopgaver. Efter deltageren har udført alle opgaver vil personens data blive sendt til en server, hvorefter deltageren får en informationsmeddelelse.
+Ved crowdsourcingeksperimentets start vil hver deltager udfylde formularen, som ses i figur \ref{fig:Questions}, før de kan fortsætte. Når formularen er udfyldt fortsætter deltageren til opgaverne. Her skal der, ligesom i laboratorieeksperimentet, udføres 4 tunnelopgaver, efterfulgt af 4 spiralopgaver og til sidst 25 pegeopgaver. Efter, at deltageren har udført alle opgaver vil personens data blive sendt til en server, hvorefter deltageren får en informationsmeddelelse.
 Vi har valgt at dele vores eksperiment på et antal af reddit-sider, da det er et meget populært internetfora og muliggør, at vi kan nå ud til så mange mennesker som overhovedet muligt.
 \begin{itemize}
 \item reddit.com/r/denmark\\
