--- a/latex/main.tex
+++ b/latex/main.tex
@@ -486,15 +486,14 @@ Crowdsourcingeksperimentet vil foregå på internettet, og vi har derfor gjort v
 
 Ved crowdsourcingeksperimentets start vil hver deltager udfylde formularen, som ses i figur \ref{fig:Questions}, før de kan fortsætte. Når formularen er udfyldt fortsætter deltageren til opgaverne. Her skal der, ligesom i laboratorieeksperimentet, udføres 4 tunnelopgaver, efterfulgt af 4 spiralopgaver og til sidst 25 pegeopgaver. Efter, at deltageren har udført alle opgaver vil personens data blive sendt til en server, hvorefter deltageren får en informationsmeddelelse, der takker dem for deres deltagelse.
 
-Vi har valgt at dele vores eksperiment på et antal af reddit-sider, da det er et meget populært internetfora og muliggør, at vi kan nå ud til så mange mennesker som overhovedet muligt.
+Vi har valgt at dele vores eksperiment på et antal Reddit-sider, da det er et meget populært internetfora og muliggør, at vi kan nå ud til så mange mennesker som overhovedet muligt.
 \begin{itemize}
-\item reddit.com/r/denmark\\
-Vi valgte $/r/denmark$ fordi det er et aktivt subreddit, som passer til vores forespørgsel, med næsten hundredetusind unikke visninger per måned.
+\item \url{reddit.com/r/denmark}
 \end{itemize}
-For at nå ud til andet end danske brugere har vi valgt også at bruge de to følgende subreddits. De er beregnet til at spørge folk om hjælp, og er de to største med dette formål som vi kunne finde.
+Vi valgte $/r/denmark$ fordi det er et aktivt subreddit, som passer til vores forespørgsel, med næsten hundredetusind unikke visninger per måned. For at nå ud til andet end danske brugere har vi valgt også at bruge de to følgende subreddits. De er beregnet til at spørge folk om hjælp, og er de to største med dette formål som vi kunne finde.
 \begin{itemize}
-\item reddit.com/r/helpme
-\item reddit.com/r/care
+\item \url{reddit.com/r/helpme}
+\item \url{reddit.com/r/care}
 \end{itemize}
 
 Som det sidste vil vi også dele forsøget på vores egne Facebook-profiler. Teksten som vi brugte til at dele forsøget kan ses i bilag \ref{sec:crowdsource-text}, den engelske version blev brugt på reddit, imens den danske blev brugt på facebook.
