--- a/latex/main.tex
+++ b/latex/main.tex
@@ -490,7 +490,9 @@ Vi har valgt at dele vores eksperiment på et antal Reddit-sider, da det er et m
 \begin{itemize}
 \item \url{reddit.com/r/denmark}
 \end{itemize}
-Vi valgte $/r/denmark$ fordi det er et aktivt subreddit, som passer til vores forespørgsel, med næsten hundredetusind unikke visninger per måned. For at nå ud til andet end danske brugere har vi valgt også at bruge de to følgende subreddits. De er beregnet til at spørge folk om hjælp, og er de to største med dette formål som vi kunne finde.
+Vi valgte $/r/denmark$ fordi det er et aktivt subreddit, som passer til vores forespørgsel, med næsten hundredetusind unikke visninger per måned. 
+
+For at nå ud til andet end danske brugere har vi valgt også at bruge de to følgende subreddits. De er beregnet til at spørge folk om hjælp, og er de to største med dette formål som vi har kunne finde.
 \begin{itemize}
 \item \url{reddit.com/r/helpme}
 \item \url{reddit.com/r/care}
