--- a/latex/main.tex
+++ b/latex/main.tex
@@ -498,7 +498,7 @@ For at nå ud til andet end danske brugere har vi også valgt at bruge de to fø
 \item \url{reddit.com/r/care}
 \end{itemize}
 
-Som det sidste vil vi også dele forsøget på vores egne Facebook-profiler. Teksten som vi brugte til at dele forsøget kan ses i bilag \ref{sec:crowdsource-text}, den engelske version blev brugt på reddit, imens den danske blev brugt på facebook.
+Vi vil også dele forsøget på vores egne Facebook-profiler. Teksten som vi brugte til at dele forsøget kan ses i bilag \ref{sec:crowdsource-text}, den engelske version blev brugt på reddit, imens den danske blev brugt på facebook.
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth, trim = 0cm 0cm 7cm 0cm, clip]{images/screenshots/ex_questions}
