--- a/latex/main.tex
+++ b/latex/main.tex
@@ -502,7 +502,7 @@ Vi vil også dele forsøget på vores egne Facebook-profiler. Teksten som vi bru
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth, trim = 0cm 0cm 7cm 0cm, clip]{images/screenshots/ex_questions}
-\caption{Skærmbillede af spørgsmål som blev stillet før crowdsourcing-deltagerne kunne udføre forsøget.}
+\caption{Skærmbillede af spørgsmål som blev stillet før crowdsourcing-deltagerne kunne udføre forsøget}
 \label{fig:Questions}
 \end{figure}
 
